# shopping

./: .env.example  .gitignore  API_DOCUMENTATION.md  CLEAN_CODE.md  README.md  SETUP.md  STATIC_FILES.md  create_admin.py  create_admin.sh  pyproject.toml  run.py  seed_categories_products.py  wsgi.py
app/: __init__.py  config.py  constants.py  database.py
app/controllers/admin/: __init__.py  banner.py  category.py  dashboard.py  order.py  product.py  user.py
app/controllers/api/: __init__.py  auth.py  banners.py  cart.py  categories.py  dashboard.py  orders.py  products.py  users.py
app/controllers/frontend/: __init__.py  cart.py  contact.py  home.py  product.py
app/models/: __init__.py  banner.py  category.py  order.py  product.py  user.py
app/services/: auth_service.py  cart_service.py  order_service.py
app/utils/: api_auth.py  api_client.py  api_response.py  api_service.py  decorators.py  helpers.py  validators.py
app/views/admin/: admin_base.html  base.html  dashboard.html  login.html
app/views/admin/banners/: form.html  list.html
app/views/admin/categories/: form.html  list.html
app/views/admin/orders/: detail.html  list.html
app/views/admin/products/: form.html  list.html
app/views/frontend/: base.html  base_cdn.html  frontend_base.html
docs/: contact-2.html  index-6.html  shop-cart-2.html  shop-list.html  shop-product-detail-left-sidebar-2.html
migrations/versions/: 044e5d1e7a71_add_name_and_subtitle_to_banner.py  dea12f3eb8d3_initial_migration.py
static/: README.md
static/css/: responsive.css  style.css
static/js/: scripts.js
(+12 files in other folders)
